--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.18.5",
     "@babel/preset-react": "^7.17.12",
     "express": "^4.18.1",
+    "jquery": "^3.6.0",
     "mongoose": "^6.3.8",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
