--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -19,5 +19,8 @@
     "mongoose": "^6.3.8",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.18.2"
   }
 }
