--- a/challenge_4/package.json
+++ b/challenge_4/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "babel-loader": "^8.2.5",
+    "jest": "^28.1.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   },
